--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
             <h2 class="major">CuttingBoard</h2>
             <span class="image main"><img src="images/CB.jpg" alt="" /></span>
             <p><strong>Augmented Reality Cooking Simulator (CuttingBoard) | 2023 </strong></p>
-            <p><strong>Tools & Technologies: </strong> Unity, C#, Python, Firebase, Figma, Blender, SpoonacularAPI</p>
+            <p><strong>Tools & Technologies: </strong> Flutter, Dart, Unity, C#, Python, Firebase, Figma, Blender</p>
             <ul>
                <li>Lead backend developer at startup.</li>
                <li>Part of pitching team for UCF Joust Competition for Student Entrepreneurs. </li>
@@ -166,6 +166,7 @@
                <li>Integrated Firebase with Unity, using cloud-storage to securely host 3D assets and user account information.</li>
                <li>Implemented GLTFUtility plugin to instantiate 3D models into Unity app during runtime from cloud-storage.</li>
                <li>Utilized OpenAI's API to implement a GPT-4 Plugin into Blender to create models via automated scripting</li>
+               <li>Established user auth with Google \& Facebook via Flutter \& Dart, safeguarding data in Firebase.</li>
             </ul>
             <p><strong>Link to website: </strong> <a href="https://arcuttingboard.com/">arcuttingboard.com</a></p>
             <h2 class="major">Parallel Chess AI</h2>
@@ -254,9 +255,8 @@
             <p><strong>Web app built using Flutter with a Firebase Backend</strong> </p>
             <p><strong>Tools & Technologies: </strong> Flutter, Dart, Firebase </p>
             <ul>
-               <li>The application was built to practice flutter and learn how to implement Google Auth using Oath 2.0</li>
+               <li>The application was built to practice flutter and learn how to implement Google Authentication using Oath 2.0 and Google's People API</li>
                <li>Firebase Authentication is used for handling user sign-in, and Firebase Hosting is used to deploy the web application.</li>
-               <li>Google's sign-in API is integrated to allow users to sign in with their Google accounts.</li>
             </ul>
             <p><strong>Link to Project:</strong> <a href="https://flutter-6cac9.web.app/#/">https://flutter-6cac9.web.app/#/</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/flutter-app">https://github.com/cirillojon/flutter-app</a></p>
