--- a/public/index.html
+++ b/public/index.html
@@ -95,15 +95,28 @@
             <h2 class="major">VS&Co.</h2>
             <span class="image main"><img src="images/VS.png" alt="" /></span>
             <p>
+               <strong>Backend Applications Developer Intern</strong><br />
+               May 2023 – Present | Remote<br />
+            <ul>
+               <li>Member of team that builds cross-functional microservices to support various teams across the comapny. 
+               <li>
+                  Notable tech stack includes: 
+                  <ul>
+                     <li>Go, Go-kit, and Azure Kubernetes Services (AKS) for Microservice development.</li>
+                     <li>Docker and NoSQL databases (CouchDB & MongoDB) for optimal app portability and data handling</li>
+                     <li>Prometheus and Grafana for comprehensive system health tracking.</li>
+                  </ul>
+               </li>
+            </ul>
                <strong>Credit/Payments Applications Developer Intern</strong><br />
-               Aug 2022 – Present | Remote<br />
+               Aug 2022 – April 2023 | Remote<br />
             <ul>
                <li>A part of team responsible for investigating software issues affecting store registers & pin-pads.</li>
                <li>Employ PowerShell scripts to process logs & investigate root causes of bugs affecting millions of customers.</li>
                <li>Identified a malfunctioning API in production impacting card applicants, prompting fixes sent to all stores.</li>
                <li>Discovered an issue with firewall implementation causing thousands of transactions to not reach cloud database.</li>
             </ul>
-            <strong>Application and Software Engineer/Developer Intern</strong><br />
+            <strong>Software Engineer Intern</strong><br />
             May 2022 – Aug 2022 | Remote<br />
             <ul>
                <li>Contributed to application development, testing, and support for Merchandise Planning & Allocation team.</li>
