--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
                <li>Integrated Firebase with Unity, using cloud-storage to securely host 3D assets and user account information.</li>
                <li>Implemented GLTFUtility plugin to instantiate 3D models into Unity app during runtime from cloud-storage.</li>
                <li>Utilized OpenAI's API to implement a GPT-4 Plugin into Blender to create models via automated scripting</li>
-               <li>Established user auth with Google \& Facebook via Flutter \& Dart, safeguarding data in Firebase.</li>
+               <li>Established user authentication with Google & Facebook via Flutter and Dart, safeguarding user data securely in Firebase.</li>
             </ul>
             <p><strong>Link to website: </strong> <a href="https://arcuttingboard.com/">arcuttingboard.com</a></p>
             <h2 class="major">Parallel Chess AI</h2>
