--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
             <span class="image main"><img src="images/VS.png" alt="" /></span>
             <p>
                <strong>Backend Applications Developer Intern</strong><br />
-               May 2023 – Present | Remote<br />
+               May 2023 – Present | Remote
             <ul>
                <li>Member of team that builds cross-functional microservices to support various teams across the comapny. 
                <li>
