--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
             <ul>
                <li>Lead backend developer at startup.</li>
                <li>Part of pitching team for UCF Joust Competition for Student Entrepreneurs. </li>
-               <li>Currently working as backend developer, responsible for API and database integration.</li>
+               <li>Responsible for API and database integratio.</li>
                <li>Developed API calls to fetch recipe information, seamlessly integrating data into the application.</li>
                <li>Integrated Firebase with Unity, using cloud-storage to securely host 3D assets and user account information.</li>
                <li>Implemented GLTFUtility plugin to instantiate 3D models into Unity app during runtime from cloud-storage.</li>
