--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
             <h2 class="major">Portfolio Website</h2>
             <span class="image main"><img src="images/html.PNG" alt="" /></span>
             <p><strong>Portfolio Site built using HTML5 and CSS3</strong> </p>
-            <p><strong>Tools & Technologies: </strong> HTML5, CSS3, SCSS, JavaScript, ThreeJS, Node.js, Express</p>
+            <p><strong>Tools & Technologies: </strong> HTML5, CSS3, SCSS, JavaScript, ThreeJs, Node.js, Express</p>
             <ul>
                <li>See Sandbox tab for some random features such as:</li>
                <ul>
@@ -286,7 +286,7 @@
             <p><strong>Link to GitHub repository:</strong> <a href=https://github.com/cirillojon/something-great">https://github.com/cirillojon/something-great</a></p>
             <h2 class="major">MIPS Processor</h2>
             <span class="image main"><img src="images/C.jpg" alt="" /></span>
-            <p><strong>MIPS Processor Emulator written in C</strong> </p>
+            <p><strong>MIPS Processor Emulator written in C | 2021 </strong> </p>
             <p><strong>Tools & Technologies: </strong> C, MIPS </p>
             <ul>
                <li>This code is a simple model of the MIPS Instruction Set Architecture (ISA) implemented in C. </li>
