--- a/public/index.html
+++ b/public/index.html
@@ -240,14 +240,14 @@
                <li>
                   Currently features various games, including:
                   <ul>
-                     <li><strong>Number Guesser:</strong> This game challenges players to guess a hidden number within a certain range. The player gets hints such as 'higher' or 'lower' to narrow down the possibilities.</li>
-                     <li><strong>Rock Paper Scissors:</strong> A classic game where players choose either rock, paper, or scissors. Rock crushes scissors, scissors cuts paper, and paper wraps rock.</li>
-                     <li><strong>Tic-Tac-Toe:</strong> A simple strategy game for two players. The objective is to get three of your own marks (either X or O) in a row, either horizontally, vertically, or diagonally.</li>
-                     <li><strong>Card Matching:</strong> This game requires players to match pairs of cards by turning over two cards at a time. The goal is to remember the locations of specific cards to match pairs more efficiently.</li>
-                     <li><strong>Whac-A-Mole:</strong> In this game, players must 'whack' moles that pop up from holes in a virtual board. The objective is to hit as many moles as possible within a given time.</li>
-                     <li><strong>Snake:</strong> A game where players control a snake which grows in length as it eats food. The player must avoid running into the snake's own body as it grows longer and the game gets faster.</li>
-                     <li><strong>Button Dodging:</strong> A game requiring players to avoid oncoming buttons or obstacles for as long as possible to achieve a high score.</li>
-                     <li><strong>WebGL Unity Game:</strong> A broad category encompassing many games built using the Unity engine and WebGL for play in web browsers.</li>
+                     <li><strong>Number Guesser</strong></li>
+                     <li><strong>Rock Paper Scissors</strong></li>
+                     <li><strong>Tic-Tac-Toe</strong></li>
+                     <li><strong>Card Matching</strong></li>
+                     <li><strong>Whac-A-Mole</strong></li>
+                     <li><strong>Snake</strong></li>
+                     <li><strong>Button Dodging</strong></li>
+                     <li><strong>WebGL Unity Game</strong></li>
                   </ul>
                </li>
                <li>Will eventually turn this WebApp into something more substantial.</li>
