--- a/public/index.html
+++ b/public/index.html
@@ -368,7 +368,6 @@
                <li>Rock Climbing Club</li>
                <li>UCF Chess Club</li>
             </ul>
-            </p>
             <h2 class="major">Technical Skills</h2>
             <p><strong>Programming Languages:</strong>
                <a href="https://www.java.com/">Java</a> • 
@@ -378,7 +377,8 @@
                <a href="https://www.python.org/">Python</a> • 
                <a href="https://www.sqltutorial.org/">SQL</a> • 
                <a href="https://www.latex-project.org/">LaTeX</a> •
-               <a href="https://go.dev/">Go</a> 
+               <a href="https://go.dev/">Go</a> •
+               <a href="https://dart.dev/">Dart</a>
             </p>
             <p><strong>Data Management & Tools:</strong>
                <a href="https://www.mongodb.com/">MongoDB</a> • 
@@ -389,7 +389,8 @@
                <a href="https://github.com/">GitHub</a> • 
                <a href="https://www.atlassian.com/software/jira">Jira</a> • 
                <a href="https://bitbucket.org/">Bitbucket</a> •
-               <a href="https://www.docker.com/">Docker</a> 
+               <a href="https://www.docker.com/">Docker</a> •
+               <a href="https://kubernetes.io/">Kubernetes</a>
             </p>
             <p><strong>Libraries, Frameworks, & IDEs:</strong> 
                <a href="https://reactjs.org/">React.js</a> • 
@@ -399,7 +400,8 @@
                <a href="https://dotnet.microsoft.com/">.NET</a> • 
                <a href="https://unity.com/">Unity</a> • 
                <a href="https://code.visualstudio.com/">VS Code</a> • 
-               <a href="https://www.jetbrains.com/idea/">IntelliJ</a>
+               <a href="https://www.jetbrains.com/idea/">IntelliJ</a> •
+               <a href="https://flutter.dev/">Flutter</a>
             </p>
          </article>
          <!-- sandbox -->
