--- a/public/index.html
+++ b/public/index.html
@@ -86,17 +86,17 @@
       <div id="main">
          <!-- Work Experience -->
          <article id="WorkExperience">
-            <!-- <h2 class="major">F5 Networks</h2>
+            <h2 class="major">F5 Networks</h2>
                <span class="image main"><img src="images/F5.png" alt="" /></span>
                <p><strong>Software Engineer</strong><br>
                   Starting in Aug 2023 | Seattle, WA<br>
                   <a href="https://www.f5.com/">Link to company</a>
-               </p> -->
+               </p> 
             <h2 class="major">VS&Co.</h2>
             <span class="image main"><img src="images/VS.png" alt="" /></span>
             <p>
                <strong>Backend Applications Developer Intern</strong><br />
-               May 2023 – Present | Remote<br />
+               May 2023 – August | Remote<br />
             <ul>
                <li>Member of team that builds cross-functional microservices to support various teams across the comapny. 
                <li>
