added flask app

--- a/public/index.html
+++ b/public/index.html
@@ -268,6 +268,17 @@
                <li>The service also logs each operation performed to a MongoDB Atlas database.</li>
             </ul>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/go-microservice-testing">https://github.com/cirillojon/go-microservice-testing</a></p>
+            <h2 class="major">Flask + Python Web App</h2>
+            <span class="image main"><img src="images/flask.png" alt="" /></span>
+            <p><strong>Web app for storing notes written in Python </strong> </p>
+            <p><strong>Tools & Technologies: </strong> Python, Flask, SQLAlchemy, CSS, HTML </p>
+            <ul>
+               <li>In this application, users are able to create, store, delete, and view existing notes.</li>
+               <li>This app employs fully-functional login and sign-up incorporating password hashing.</li>
+               <li>All user info is dynamically stored to and loaded from an SQL database via SQLAlchemy.</li>
+               <li>This project was built to practice using Python for development.</li>
+            </ul>
+            <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/python-web-app">https://github.com/cirillojon/python-web-app</a></p>
             <h2 class="major">Flutter + Firebase</h2>
             <span class="image main"><img src="images/flutter-fire.png" alt="" /></span>
             <p><strong>Web app built using Flutter with a Firebase Backend</strong> </p>
