--- a/public/index.html
+++ b/public/index.html
@@ -91,9 +91,10 @@
             <p><strong>Software Engineer</strong><br>
                August 2023 - Present | Seattle, WA<br>
                <a href="https://www.f5.com/">Link to company</a>
+               <p><strong>Tools & Technologies:</strong> Python, GitSwarm, Confluence</p>
             <ul>
                <li>
-                  Supporting F5’s next-gen rSeries and VELOS Products as a member of the Velocity System Integration team
+                  Supporting F5’s next-gen rSeries and VELOS products as a member of the Velocity System Integration team.
                </li>
             </ul>
             </p> 
@@ -102,32 +103,29 @@
             <p>
                <strong>Backend Applications Developer Intern</strong><br />
                May 2023 – August 2023 | Remote<br />
+               <p><strong>Tools & Technologies:</strong> Go, Azure, Kubernetes, Docker, CouchDB, MongoDB, Consul, Grafana</p>
             <ul>
-               <li>Member of team that builds cross-functional microservices to support various teams across the comapny. 
-               <li>
-                  Notable tech stack includes: 
-                  <ul>
-                     <li>Go, Go-kit, and Azure Kubernetes Services (AKS) for Microservice development.</li>
-                     <li>Docker and NoSQL databases (CouchDB & MongoDB) for optimal app portability and data handling</li>
-                     <li>Prometheus and Grafana for comprehensive system health tracking.</li>
-                  </ul>
-               </li>
+               <li>Supported 100+ Go microservices within an Azure Kubernetes Services environment.
+               <li>Optimized a core service’s performance by transitioning blacklisted user storage from array to map structure,
+                  achieving 100x to 1000x faster data lookups. </li>
+               <li>Leveraged CouchDB and Consul for local testing of updates.</li>
             </ul>
             <strong>Credit/Payments Applications Developer Intern</strong><br />
             Aug 2022 – April 2023 | Remote<br />
+            <br />
+            <p><strong>Tools & Technologies:</strong> Java, Powershell, Cherwell</p>
             <ul>
-               <li>A part of team responsible for investigating software issues affecting store registers & pin-pads.</li>
-               <li>Employ PowerShell scripts to process logs & investigate root causes of bugs affecting millions of customers.</li>
-               <li>Identified a malfunctioning API in production impacting card applicants, prompting fixes sent to all stores.</li>
-               <li>Discovered an issue with firewall implementation causing thousands of transactions to not reach cloud database.</li>
+               <li>Investigated software issues affecting pin-pads in all North American Stores as a member of payments team.</li>
+               <li>Conducted root cause analysis of software bugs potentially impacting millions of customers at 1000+ stores.</li>
+               <li>Identified production faults with APIs & firewalls, saving the company from thousands in potential $ losses.</li>
             </ul>
             <strong>Software Engineer Intern</strong><br />
             May 2022 – Aug 2022 | Remote<br />
+            <br />
+            <p><strong>Tools & Technologies:</strong> C#, SQL, .NET, WPF, Bitbucket </p>
             <ul>
-               <li>Contributed to application development, testing, and support for Merchandise Planning & Allocation team.</li>
-               <li>Assisted in developing an efficient C# application to improve & replace a slow and error-prone planning app.</li>
-               <li>Generated data in MSSQL for comprehensive QA testing & leveraged SwaggerHub to validate various APIs.</li>
-               <li>Presented contributions to company leadership & proposed method to integrate machine learning in MP&A.</li>
+               <li>Assisted development of new merchandise planning application, boosting productivity for hundreds of staff</li>
+               <li>Created data in MS SQL for quality assurance testing of planning app and validated APIs using SwaggerHub.</li>
             </ul>
             <p> <a href="https://www.victoriassecret.com/">Link to Company</a></p>
             <h2 class="major">Informa Software</h2>
@@ -135,10 +133,11 @@
             <p><strong>Software Engineer Intern</strong><br>
                Jan 2022 – May 2022 | Maitland, FL
             </p>
+            <p><strong>Tools & Technologies:</strong> JavaScript, C#, Liquid Office, Budibase</p>
             <ul>
-               <li>Developed intuitive forms & business solutions for companies in diverse industries using JavaScript and C#.</li>
-               <li>Conducted research into cloud-based application hosting to reduce company’s existing hosting costs by 35%.</li>
-               <li>Produced comprehensive technical documentation, & facilitated multiple meetings to demonstrate findings.</li>
+               <li>Created user-friendly forms and business solutions for companies in diverse industries.</li>
+               <li>Led research into cloud-hosting solutions, which could potentially diminish existing hosting expenses by 35%.</li>
+               <li>Produced comprehensive technical documentation, and facilitated meetings to demonstrate findings.</li>
             </ul>
             <p><a href="https://www.informasoftware.com/">Link to company</a></p>
             <h2 class="major">Papa Diesel's BBQ</h2>
@@ -146,8 +145,9 @@
             <p><strong>Web Developer / Food Truck Staff</strong><br>
                August 2021 – Present | Orlando, FL
             </p>
+            <p><strong>Tools & Technologies:</strong> JavaScript, HTML, CSS, Bootstrap </p>
             <ul>
-               <li>Helped create an updated, more functional website for company using Bootstrap, HTML, CSS, and JavaScript</li>
+               <li>Helped create an updated, more functional website for company. </li>
                <li>Assists with various duties aboard the food truck such as, taking orders, preparing food, cutting meats, carrying and loading equipment, daily sanitization of the work environment, and overall quality assurance</li>
             </ul>
             <p><a href="https://cirillojon.github.io/pdb/">Link to website</a></p>
@@ -179,21 +179,25 @@
             <ul>
                <li>Lead backend developer at startup.</li>
                <li>Part of pitching team for UCF Joust Competition for Student Entrepreneurs. </li>
-               <li>Responsible for API and database integration.</li>
-               <li>Developed API calls to fetch recipe information, seamlessly integrating data into the application.</li>
-               <li>Integrated Firebase with Unity, using cloud-storage to securely host 3D assets and user account information.</li>
-               <li>Implemented GLTFUtility plugin to instantiate 3D models into Unity app during runtime from cloud-storage.</li>
+               <li>Engineered APIs for efficient app-to-database communication and dynamic data presentation to UI.</li>
+               <li>Deployed open-source ’GLTFUtility’ plugin for real-time instantiating of 3D assets from Firebase storage.</li>
+               <li>Conceptualized & constructed a system design model that minimized DB requests saving hundreds in costs.</li>
+               <li>Instituted user authentication supporting Google and Facebook, utilizing Firebase for user data storage.</li>
                <li>Utilized OpenAI's API to implement a GPT-4 Plugin into Blender to create models via automated scripting</li>
-               <li>Established user authentication with Google & Facebook via Flutter and Dart, safeguarding user data securely in Firebase.</li>
             </ul>
             <p><strong>Link to website: </strong> <a href="https://arcuttingboard.com/">arcuttingboard.com</a></p>
             <h2 class="major">Parallel Chess AI</h2>
             <span class="image main"><img src="images/chess.jpg" alt="" /></span>
             <p><strong> Java Chess Engine & Multi-threaded AI | 2023</strong><br />
             <p><strong>Tools & Technologies: </strong>Java, IntelliJ, LaTeX, Overleaf </p>
-            • Developed a robust Java-based chess engine with a multi-threaded AI using alpha-beta-pruning.<br />
-            • Conducted research & presented results detailing runtime improvements made by parallelizing alpha-beta.
-            </p>
+            <ul> 
+               <li>
+                  Developed a robust Java-based chess engine with a multi-threaded AI using alpha-beta pruning.
+               </li>
+               <li>
+                  Authored a research paper detailing 270% performance increase achieved through paralellizing alpha-beta.
+               </li>
+            </ul>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/ChessAI">https://github.com/cirillojon/ChessAI</a></p>
             <p><strong>Link to Paper:</strong> <a href="images/Final-Paper.pdf">Multi-threaded Chess AI</a></p>
             <h2 class="major">Trendify</h2>
@@ -210,18 +214,17 @@
             <span class="image main"><img src="images/html.PNG" alt="" /></span>
             <p><strong>Portfolio Site built using HTML5 and CSS3</strong> </p>
             <p><strong>Tools & Technologies: </strong> HTML5, CSS3, SCSS, JavaScript, ThreeJs, Node.js, Express</p>
+            
+            <p><strong>See Sandbox tab for some random features such as:</strong></p>
             <ul>
-               <li>See Sandbox tab for some random features such as:</li>
-               <ul>
-                  <li><strong>Weather Fetcher</strong>: Get the current weather for any city using the <a href="https://openweathermap.org/api">OpenWeatherMap API</a>.</li>
-                  <li><strong>Trivia Game</strong>: Test your knowledge with a trivia game powered by the <a href="https://opentdb.com/api_config.php">OpenTDB API</a>.</li>
-                  <li><strong>Random Joke</strong>: Enjoy a random joke fetched from the <a href="https://jokeapi.dev/">JokeAPI</a> using their REST API.</li>
-                  <li><strong>ChatGPT Chatbot</strong>: Interact with an AI-powered chatbot using the <a href="https://beta.openai.com/docs/">OpenAI API</a>.</li>
-                  <li><strong>NASA Astronomy Picture of the Day</strong>: Discover NASA's featured image of the day using their <a href="https://api.nasa.gov/#apod">APOD API</a>.</li>
-                  <li><strong>Three.js</strong>: Rotating 3D cube & torus on the landing page, created using <a href="https://threejs.org/">Three.js</a>.</li>
-                  <li><strong>Useless Facts</strong>: Get random or today's useless fact using the <a href="https://uselessfacts.jsph.pl/">Useless Facts API</a>.</li>
-                  <li><strong>Google Maps</strong>: Explore a map centered on New York City using the <a href="https://developers.google.com/maps/documentation/javascript/overview">Google Maps JavaScript API</a>.</li>
-               </ul>
+               <li><strong>Weather Fetcher</strong>: Get the current weather for any city using the <a href="https://openweathermap.org/api">OpenWeatherMap API</a>.</li>
+               <li><strong>Trivia Game</strong>: Test your knowledge with a trivia game powered by the <a href="https://opentdb.com/api_config.php">OpenTDB API</a>.</li>
+               <li><strong>Random Joke</strong>: Enjoy a random joke fetched from the <a href="https://jokeapi.dev/">JokeAPI</a> using their REST API.</li>
+               <li><strong>ChatGPT Chatbot</strong>: Interact with an AI-powered chatbot using the <a href="https://beta.openai.com/docs/">OpenAI API</a>.</li>
+               <li><strong>NASA Astronomy Picture of the Day</strong>: Discover NASA's featured image of the day using their <a href="https://api.nasa.gov/#apod">APOD API</a>.</li>
+               <li><strong>Three.js</strong>: Rotating 3D cube & torus on the landing page, created using <a href="https://threejs.org/">Three.js</a>.</li>
+               <li><strong>Useless Facts</strong>: Get random or today's useless fact using the <a href="https://uselessfacts.jsph.pl/">Useless Facts API</a>.</li>
+               <li><strong>Google Maps</strong>: Explore a map centered on New York City using the <a href="https://developers.google.com/maps/documentation/javascript/overview">Google Maps JavaScript API</a>.</li>
             </ul>
             <p><strong>Link to Project:</strong> <a href="https://cirillojon.herokuapp.com/">https://cirillojon.herokuapp.com/</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/Portfolio-Heroku">https://github.com/cirillojon/Portfolio-Heroku</a></p>
