--- a/public/index.html
+++ b/public/index.html
@@ -271,7 +271,7 @@
                <li>The service also logs each operation performed to a MongoDB Atlas database.</li>
             </ul>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/go-microservice-testing">https://github.com/cirillojon/go-microservice-testing</a></p>
-            <h2 class="major">Flask + Python Web App</h2>
+            <h2 class="major">Flask + Python</h2>
             <span class="image main"><img src="images/flask.png" alt="" /></span>
             <p><strong>Web app for storing notes written in Python </strong> </p>
             <p><strong>Tools & Technologies: </strong> Python, Flask, SQLAlchemy, CSS, HTML </p>
