added apartment project

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
             <p><strong>Software Engineer</strong><br>
                August 2023 - Present | Seattle, WA<br>
                <a href="https://www.f5.com/">Link to company</a>
-               <p><strong>Tools & Technologies:</strong> Python, GitSwarm, Confluence</p>
+            <p><strong>Tools & Technologies:</strong> Python, GitSwarm, Confluence</p>
             <ul>
                <li>
                   Supporting F5’s next-gen rSeries and VELOS products as a member of the Velocity System Integration team.
@@ -103,11 +103,12 @@
             <p>
                <strong>Backend Applications Developer Intern</strong><br />
                May 2023 – August 2023 | Remote<br />
-               <p><strong>Tools & Technologies:</strong> Go, Azure, Kubernetes, Docker, CouchDB, MongoDB, Consul, Grafana</p>
+            <p><strong>Tools & Technologies:</strong> Go, Azure, Kubernetes, Docker, CouchDB, MongoDB, Consul, Grafana</p>
             <ul>
                <li>Supported 100+ Go microservices within an Azure Kubernetes Services environment.
                <li>Optimized a core service’s performance by transitioning blacklisted user storage from array to map structure,
-                  achieving 100x to 1000x faster data lookups. </li>
+                  achieving 100x to 1000x faster data lookups. 
+               </li>
                <li>Leveraged CouchDB and Consul for local testing of updates.</li>
             </ul>
             <strong>Credit/Payments Applications Developer Intern</strong><br />
@@ -190,7 +191,7 @@
             <span class="image main"><img src="images/chess.jpg" alt="" /></span>
             <p><strong> Java Chess Engine & Multi-threaded AI | 2023</strong><br />
             <p><strong>Tools & Technologies: </strong>Java, IntelliJ, LaTeX, Overleaf </p>
-            <ul> 
+            <ul>
                <li>
                   Developed a robust Java-based chess engine with a multi-threaded AI using alpha-beta pruning.
                </li>
@@ -214,7 +215,6 @@
             <span class="image main"><img src="images/html.PNG" alt="" /></span>
             <p><strong>Portfolio Site built using HTML5 and CSS3</strong> </p>
             <p><strong>Tools & Technologies: </strong> HTML5, CSS3, SCSS, JavaScript, ThreeJs, Node.js, Express</p>
-            
             <p><strong>See Sandbox tab for some random features such as:</strong></p>
             <ul>
                <li><strong>Weather Fetcher</strong>: Get the current weather for any city using the <a href="https://openweathermap.org/api">OpenWeatherMap API</a>.</li>
@@ -262,6 +262,12 @@
             </ul>
             <p><strong>Link to project:</strong> <a href="https://react-app-sandbox.netlify.app">https://react-app-sandbox.netlify.app</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/react-app-sandbox">https://github.com/cirillojon/react-app-sandbox</a></p>
+            <h2 class="major">React + Python</h2>
+            <span class="image main"><img src="images/pyact.jpg" alt="" /></span>
+            <p><strong>Apartment Data Visualizer</strong> </p>
+            <p><strong>Tools & Technologies: </strong>React, JavaScript, Python, Flask, PostgresSQL</p>
+            <p>This project scrapes apartment floorplan data from various websites and provides a visual representation of one-bedroom apartments, categorizing them based on price and size.</p>
+            <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/apartment-data-visualizer">https://github.com/cirillojon/apartment-data-visualizer</a></p>
             <h2 class="major">Go Microservice</h2>
             <span class="image main"><img src="images/go-docker.jpg" alt="" /></span>
             <p><strong>Calculation Service written in Go </strong> </p>
