--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
             <p><strong>Software Engineer</strong><br>
                August 2023 - Present | Seattle, WA<br>
                <a href="https://www.f5.com/">Link to company</a>
-            <p><strong>Tools & Technologies:</strong> Python, GitSwarm, Confluence</p>
+            <p><strong>Tools & Technologies:</strong> Python, Docker, GitSwarm, Selenium, Linux</p>
             <ul>
                <li>
                   Supporting F5’s next-gen rSeries and VELOS products as a member of the Velocity System Integration team.
