--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
       <div id="main">
          <!-- Work Experience -->
          <article id="WorkExperience">
-            <h2 class="major">F5 Networks</h2>
+            <h2 class="major">F5</h2>
             <span class="image main"><img src="images/F5.png" alt="" /></span>
             <p><strong>Software Engineer</strong><br>
                August 2023 - Present | Seattle, WA<br>
