update grad date

--- a/public/index.html
+++ b/public/index.html
@@ -355,7 +355,7 @@
             <span class="image main"><img src="images/ucf.png" alt="" /></span>
             <p>
                <strong>University of Central Florida | B.S. in Computer Science</strong><br />
-               Expected Graduation August 2023 | Orlando, FL<br />
+               Graduated August 2023 | Orlando, FL<br />
                <a href="https://www.ucf.edu/">Link to university</a> <br />
                <br/>
                <strong>Relevant Coursework:</strong>
